--- a/TypedGML.CLI/TypedGML.CLI.csproj
+++ b/TypedGML.CLI/TypedGML.CLI.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+      <PackageReference Include="System.CommandLine" Version="2.0.0-rc.1.25451.107" />
     </ItemGroup>
 
     <ItemGroup>
