--- a/TypedGML.Transpiler/TypedGML.Transpiler.csproj
+++ b/TypedGML.Transpiler/TypedGML.Transpiler.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="GameMaker\Generators\" />
+    </ItemGroup>
+
 </Project>
