Changed TGML project file structure

--- a/TypedGML.Transpiler/TypedGML.Transpiler.csproj
+++ b/TypedGML.Transpiler/TypedGML.Transpiler.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="GameMaker\Generators\" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     </ItemGroup>
 
 </Project>
